RESOLVED FIXED264457
[macOS] Fix rendering of <select> in vertical writing mode
https://bugs.webkit.org/show_bug.cgi?id=264457
Summary [macOS] Fix rendering of <select> in vertical writing mode
Aditya Keerthi
Reported 2023-11-08 17:08:34 PST
AppKit pop-up buttons are not height resizable.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-11-08 17:08:42 PST
Aditya Keerthi
Comment 2 2023-11-08 20:53:39 PST
EWS
Comment 3 2023-11-09 09:42:12 PST
Committed 270458@main (2efb1a7810e0): <https://commits.webkit.org/270458@main> Reviewed commits have been landed. Closing PR #20213 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.